<resources>
    <string name="app_name">SocialMedia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_mobile_number">Email/Mobile number</string>
    <string name="continue_">Continue</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="or">or</string>
</resources>